# HPCSpring2022

./: omp-scan.cpp  report.txt
Final Project/: CMakeLists.txt  Makefile  README.md
Final Project/src/: main.cc  vec3.h
hw2/: MMult1.cpp  Makefile  gs2D-omp.cpp  hw2_reports.txt  jacobi2D-omp.cpp  omp_solved2.c  omp_solved3.c  omp_solved4.c  omp_solved5.c  omp_solved6.c  val_test01.cpp  val_test02_solved.cpp
hw3/: fast-sin.cpp
hw4/: jacobi2D.cu  makefile  mat_inn.cu  report.txt  vec_inn.cu
